feat: add Inspectr for request inspection
